--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=PeakList
+spring.datasource.url=jdbc:postgresql://localhost:5432/peaklist
+spring.datasource.username=postgres_user
+spring.datasource.password=postgres_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
